-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
-
05ae8f2fa (15.0)
The "Apply function signature changes" inserts parameters with hardcoded order of qualifiers (['const', 'type']) and does not mark the changed line as changed. Thus one needs to manually touch that line in order to force-format it.
Small Analysis:
1) "Apply function signature changes" quick fix is formatted incorrectly, or not formatted at all
2) The line isn't marked as changed (I couldn't reproduce it)
3) If applying "Apply function signature changes" quick fix for the function
void foo(int const *i);
the result will be incorrect:
void foo(const int *i) { }
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-31104 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
600283,2 | CppEditor: Enable formatting for "apply signature changes" action | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |