CppEditor: Enable formatting for "apply signature changes" action

So that the changes done by our internal rewriter get properly formatted
afterwards by ClangFormat (if enabled).

Fixes: QTCREATORBUG-31104
Change-Id: I4066ef56a765a8f2c2542b4f9220f1857d013624
Reviewed-by: David Schulz <david.schulz@qt.io>